--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "description": "Discovering Progressive Web App(s) by building one using Polymer 2, Service Workers etc.",
   "main": "index.html",
   "dependencies": {
+    "paper-styles": "^2.0.0",
     "polymer": "^2.0.1"
   },
   "devDependencies": {
