--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
   "name": "test-pwa",
   "short_name": "test-pwa",
   "description": "Discovering Progressive Web App(s) by building one using Polymer 2, Service Workers etc.",
-  "start_url": "/",
-  "display": "standalone"
+  "start_url": "/test-pwa",
+  "display": "browser"
 }
