--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "background_color": "#2196F3",
-  "display": "fullscreen",
+  "display": "standalone",
   "description": "Discovering Progressive Web App(s) by building one using Polymer 2, Service Workers etc.",
   "name": "test-pwa",
   "short_name": "test-pwa",
