--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,12 @@
   "icons": [
     {
       "sizes": "256x256",
-      "src": "icon-256px.png",
+      "src": "images/icon-256px.png",
+      "type": "image/png"
+    },
+    {
+      "sizes": "512x512",
+      "src": "images/icon-512px.png",
       "type": "image/png"
     }
   ],
