--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "main": "index.html",
   "dependencies": {
     "app-layout": "^2.0.1",
+    "app-route": "PolymerElements/app-route#^2.0.2",
     "iron-icons": "^2.0.1",
     "paper-button": "^2.0.0",
     "paper-icon-button": "^2.0.0",
