--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "polymer": "^2.0.2"
   },
   "devDependencies": {
+    "paper-input": "^2.0.1",
     "web-component-tester": "^6.1.2",
     "webcomponentsjs": "^1.0.1"
   }
